--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "cordova-plugin-zip",
-  "version": "3.1.0",
+  "version": "3.2.0-dev",
   "description": "Unzips zip files",
   "cordova": {
     "id": "cordova-plugin-unzip",
     "platforms": [
       "android",
-      "ios"
+      "ios",
+      "electron"
     ]
   },
   "repository": {
@@ -16,12 +17,13 @@
   "keywords": [
     "ecosystem:cordova",
     "cordova-android",
-    "cordova-ios"
+    "cordova-ios",
+    "cordova-electron"
   ],
   "engines": [
     {
       "name": "cordova",
-      "version": ">=3.3.0"
+      "version": ">=3.0.0"
     }
   ],
   "author": "",
